QA_Ipreo/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Budget</fullName>
        <description>Used only for Budget Opportunity Record Types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Business and Renewals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won Sales</fullName>
        </values>
        <values>
            <fullName>Closed Won Verified</fullName>
        </values>
        <values>
            <fullName>Contract Pending</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Quote%2FProposal Sent</fullName>
        </values>
        <values>
            <fullName>Sales Meeting</fullName>
        </values>
        <values>
            <fullName>Trial Access</fullName>
        </values>
        <values>
            <fullName>Trial Access Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Cancelled Verified</fullName>
        </values>
        <values>
            <fullName>Closed Won Sales</fullName>
        </values>
        <values>
            <fullName>Closed Won Verified</fullName>
        </values>
        <values>
            <fullName>Contract Pending</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Provisional Cancel</fullName>
        </values>
        <values>
            <fullName>Quote%2FProposal Sent</fullName>
        </values>
        <values>
            <fullName>Sales Meeting</fullName>
        </values>
        <values>
            <fullName>Trial Access</fullName>
        </values>
        <values>
            <fullName>Trial Access Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <description>Annual Contract Value</description>
        <inlineHelpText>Annual Contracted Value - Roll up of ACpV (Annual Contract Product Value) from Opportunity Product(s).</inlineHelpText>
        <label>ACV</label>
        <summarizedField>OpportunityLineItem.ACpV__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_on_Contract__c</fullName>
        <label>Account Name on Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announce_Deal__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked when the Deal Announcement (email) should be sent at Closed Won Verified or unchecked for confidential deals.  Defaults to checked for new Opportunity and resets to unchecked AFTER announcement is sent.</inlineHelpText>
        <label>Announce Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Pass_Through__c</fullName>
        <inlineHelpText>Roll up of Annual Pass Through from Opportunity Product(s).</inlineHelpText>
        <label>Annual Pass Through</label>
        <summarizedField>OpportunityLineItem.Annual_Pass_Through__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <formula>Contract__r.Billing_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Contract__r.Billing_City__c</formula>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <formula>Contract__r.Billing_Contact__r.FirstName &amp;&quot; &quot;&amp; Contract__r.Billing_Contact__r.LastName</formula>
        <label>Billing Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Contract__r.Billing_Country__c</formula>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency_Other_Please_Specify__c</fullName>
        <formula>Contract__r.Billing_Frequency_Other_Please_Specify__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency - Other Please Specify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>TEXT( Contract__r.Billing_Frequency__c )</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date_Other_Pls_Specify__c</fullName>
        <formula>Contract__r.Billing_Start_Date_Other_Pls_Specify__c</formula>
        <label>Billing Start Date - Other Pls Specify</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <formula>TEXT( Contract__r.Billing_Start_Date__c )</formula>
        <label>Billing Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <formula>Contract__r.Billing_State_Province__c</formula>
        <label>Billing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Contract__r.Billing_Street__c</formula>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <formula>Contract__r.Billing_Zip_Postal_Code__c</formula>
        <label>Billing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunities that are bundled together</description>
        <label>Bundled With</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Opportunity does not exist or does not match an opportunity on the current Account.</errorMessage>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Bundled With)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Relief__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Relief</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_is_Current_Month__c</fullName>
        <description>Used primarily for ExComm report filtering in Wave</description>
        <formula>Month ( CloseDate ) &gt;= Month ( TODAY() )</formula>
        <label>Close Date is &gt;= Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidential_Announcement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when the Confidential Deal Announcement (email) should be sent at Closed Won Verified.  Defaults to unchecked for new Opportunity.</inlineHelpText>
        <label>Confidential Announcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT(Contract__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to custom contract object</description>
        <inlineHelpText>Link to the Contract with which Opportunity is associated.  Populated when user clicks Add Contract on Opportunity or when user selects an existing Contract with which to associate Opportunity.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Announcement_Kudos__c</fullName>
        <label>Deal Announcement Kudos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Announcement_Sent__c</fullName>
        <description>Flag to indicate if the closed won verified deal announcement is sent.  Used to inhibit a deal announcement from being sent twice if the opportunity is re-set to Closed Won Verified.</description>
        <inlineHelpText>Most recent date on which Deal Announcement was sent.  Set by system on sending of announcement.</inlineHelpText>
        <label>Deal Announcement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Billing__c</fullName>
        <formula>Contract__r.Detailed_Billing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detailed Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Transaction_Fees__c</fullName>
        <inlineHelpText>Roll up of Estimated Annual Transaction Fees from Opportunity Product(s).</inlineHelpText>
        <label>Est. Annual Transaction Fees</label>
        <summarizedField>OpportunityLineItem.Estimated_Annual_Fees__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>Est. Completion Date based on Est. Completion Date of Opp Products. This field gets updated using Apex Class</description>
        <label>Opportunity Est. Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evergreen_Date__c</fullName>
        <label>Evergreen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evergreen_Period__c</fullName>
        <formula>IF( ISPICKVAL( Contract__r.Evergreen_Period__c, &quot;Other&quot; ), TEXT(Contract__r.Evergreen_Period_Other_Please_Specify__c), TEXT(  Contract__r.Evergreen_Period__c ) )</formula>
        <label>Evergreen Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <formula>IF( ISPICKVAL(Contract__r.Evergreen__c, &apos;Yes&apos;), True, False)</formula>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Account_ID_Bak__c</fullName>
        <label>Finance Account ID Bak</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Account_ID__c</fullName>
        <formula>IF( ISBLANK(Account.Finance_Account_ID__c)  ,  Account.Account_ID__c ,  Account.Finance_Account_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Unpaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Unpaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Close_Date_In_Current_Year__c</fullName>
        <label>Is Close Date In Current Year</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Win__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to indicate that the Opportunity is a Key Win. Manually maintained.</description>
        <inlineHelpText>indicate if Opportunity is a Key Win</inlineHelpText>
        <label>Key Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <inlineHelpText>Line of Business.  Defaults from Account when Opportunity is saved.  Can be updated.  Selection of Vertical filters the list of values for LOB.  Required at Closed Won Sales, Closed Won Verified.</inlineHelpText>
        <label>LOB</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Secretary/Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Trading*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI Trading*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Syndication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Bus. Dev.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Company Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Industry/Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By__c</fullName>
        <label>Lead Created By</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Amount_Annual__c</fullName>
        <description>Rollup of Product Lost Amount (Annual) from Lost Products.</description>
        <inlineHelpText>Rollup of Product Lost Amount (Annual) from Lost Products.</inlineHelpText>
        <label>Lost Amount (Annual)</label>
        <summarizedField>OpportunityLineItem.Product_Lost_Amount_Annual__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lost_Amount_Total__c</fullName>
        <description>Rollup of Product Lost Amount (Total) from Lost Products.</description>
        <inlineHelpText>Rollup of Product Lost Amount (Total) from Lost Products.</inlineHelpText>
        <label>Lost Amount (Total)</label>
        <summarizedField>OpportunityLineItem.Product_Lost_Amount_Total__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NYSE_Program_Tier__c</fullName>
        <inlineHelpText>Indicates that the Opportunity is associated with a NYSE Program (NYSE is subsidizing at least one Opportunity Product on the Opportunity).  Defaults from Account.  If selected, &quot;Non-Subsidized Contracted Value&quot; must also be populated.</inlineHelpText>
        <label>NYSE Program Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_ACV__c</fullName>
        <formula>ACV__c -  Annual_Pass_Through__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that calculates ACV - Annual Pass Through</inlineHelpText>
        <label>Net ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_New_Business__c</fullName>
        <inlineHelpText>Roll up of Net New Business from Opportunity Product(s).  Also (ACV - Annual Pass Through) - (Prior Year ACV - Prior Year Pass Through).</inlineHelpText>
        <label>Net New Business</label>
        <summarizedField>OpportunityLineItem.Net_New_Business__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_GMG_Opportunity_Products__c</fullName>
        <description>Number of GMG Opportunity Products</description>
        <label>No. of GMG Opportunity Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Vertical__c</field>
            <operation>equals</operation>
            <value>GMG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opp_Products_with_One_Year__c</fullName>
        <label>No. of Opp Products with One Year</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Term_Months__c</field>
            <operation>equals</operation>
            <value>12</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opp_Products_without_Status__c</fullName>
        <description>To check if there is a opportunity product without status.</description>
        <label>No. of Opp Products without Status</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opp_Products_without_Subsidy__c</fullName>
        <description>Summary field to count Opportunity Products without Subsidy</description>
        <label>No. of Opp Products without Subsidy</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Apply_NYSE_Subsidy__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Transaction_Type__c</field>
            <operation>equals</operation>
            <value>New Business, Upsell, Add On, Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunity_Products__c</fullName>
        <label>No. of Opportunity Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunity_Products_with_PROJ__c</fullName>
        <description>summary fields to calculate number of Opportunity Products with Product Revenue Type as &apos;PROJ&apos;. This field can be used to validate Revenue type.</description>
        <label>No. of Opportunity Products with PROJ</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Revenue_Type__c</field>
            <operation>equals</operation>
            <value>PROJ</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Product_Add_Ons__c</fullName>
        <label>No. of Product Add Ons</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Add On</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Renewed_Opp_Products__c</fullName>
        <label>No. of Renewed Opp Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Renewed</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Subsidized_Contracted_Value__c</fullName>
        <inlineHelpText>Amount the customer would pay for the Opportunity Products on this Opportunity if subsidies did not apply (if customer came off subsidy).</inlineHelpText>
        <label>NYSE Non-subsidized Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppUniqueKey__c</fullName>
        <description>Data migration purpose</description>
        <externalId>true</externalId>
        <label>OppUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Identifier__c</fullName>
        <label>Opportunity Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Closed_Date__c</fullName>
        <formula>Owner.LastName + &apos;, &apos; + 
Owner.FirstName + &apos; - &apos; +  
Text(YEAR(CloseDate)) + &apos;-&apos; +  
IF(
	LEN(Text(Month(CloseDate))) = 1 , 
	(&apos;0&apos; + Text(Month(CloseDate))), 
	Text(Month(CloseDate))
	) + &apos;-&apos; +  
IF(
	LEN(Text(Day(CloseDate))) = 1 , 
	(&apos;0&apos; + Text(Day(CloseDate))), 
	Text(Day(CloseDate))
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner - Closed Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Opp_Creation_on_Convert_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within your business processes, you might have your process setup, as to not have Opportunities created directly from Leads during conversion.

The Lead Conversion Page Layout and the conversion process are not customizable though.

Using a validation rule can prevent creation of an Opportunity upon Lead Conversion.

As a workaround, follow these steps:
Create a Checkbox field on Opportunity, default Unchecked
Create a Checkbox field on Leads, default Checked
Map the Lead field to the Opportunity field
Create a Validation rule on Opportunities
As the error Condition Formula insert the Checkbox field you just created.
As the error message, enter &quot;Creating an Opportunity on Lead conversion is currently not allowed.&quot;  Show on top of Page</description>
        <inlineHelpText>This is a &quot;system&quot; field used to prevent Opportunity creation upon Lead conversion.  Do not use for any other purpose.</inlineHelpText>
        <label>Prevent Opp Creation on Convert (System)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACV__c</fullName>
        <inlineHelpText>Roll up of Prior Year ACpV from Opportunity Product(s).</inlineHelpText>
        <label>Prior Year ACV</label>
        <summarizedField>OpportunityLineItem.Prior_Year_ACpV__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Pass_Through__c</fullName>
        <inlineHelpText>Roll up of Prior Year Pass Through from Opportunity Product(s).</inlineHelpText>
        <label>Prior Year Pass Through</label>
        <summarizedField>OpportunityLineItem.Prior_Year_Pass_Through__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <formula>Contract__r.Purchase_Order_Number__c</formula>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Required__c</fullName>
        <formula>Contract__r.Purchase_Order_Required__c</formula>
        <label>Purchase Order Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Used only in Sales Wave app reporting</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Increment__c</fullName>
        <inlineHelpText>Freq of renewals after initial delivery of proj or initial subscrip term.  For projects, Close Date on Renewal Opp is Close Date on original Opp+Renewal Incr.  For subscrips, Subscription End Date on Renewal is  Subscription End Date on orig+Renewal Incr.</inlineHelpText>
        <label>Renewal Increment</label>
        <picklist>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Period__c</fullName>
        <formula>Text( Contract__r.Renewal_Notice_Period__c )</formula>
        <label>Renewal Notice Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Required__c</fullName>
        <formula>Contract__r.Renewal_Notice_Required__c</formula>
        <label>Renewal Notice Required</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>